[project]
name = "quizzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.10",
    "langchain-core>=1.2.14",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "loguru>=0.7.3",
    "pydantic-settings>=2.11.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
]
